# rust_wasm

./: Cargo.toml  README.md  fdw_std.css  index.html  rust_wasm_bg.wasm
pkg/: package.json  rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.wasm.d.ts
src/: fdw.rs  lib.rs  shapes.rs
