[package]
name = "rust_wasm"
version = "0.1.0"
authors = ["pionier <fdw-pionier@memoad.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Node',
  'Window',
]
